# nRF52840-ble-keyboard

./: .gitignore  CMakeLists.txt  README.md  pm_static.yml  prj.conf  sample.yaml  schematic_text.txt
boards/me/ai_ble_keyboard/: Kconfig.ai_ble_keyboard  ai_ble_keyboard-pinctrl.dtsi  ai_ble_keyboard.dts  ai_ble_keyboard.yaml  ai_ble_keyboard_defconfig  board.cmake  board.yml
docs/: hardware.md  host_protocol.md
dts/bindings/: vendor-prefixes.txt
dts/bindings/gpio/: me,ai-ble-keyboard-controls.yaml
src/: app_types.h  display.c  display.h  hid_transport.c  hid_transport.h  host_ble.c  host_ble.h  host_protocol.c  host_protocol.h  key_wakeup_pm.c  key_wakeup_pm.h  keyboard_matrix.c  keyboard_matrix.h  keymap.c  keymap.h  main.c  power.c  power.h  rgb.c  rgb.h
tools/: host_test.py
